chore: Modify project to utilize env

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "template",
     "require": {
         "symfony/console": "*",
-        "guzzlehttp/guzzle": "^7.0"
+        "guzzlehttp/guzzle": "^7.0",
+        "vlucas/phpdotenv": "^5.4"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
